# mcda5580-clusturing

./: customer_clustering.ipynb  eda.ipynb  main.py  outlier_explanation.csv  product_cluster_centroids.csv  product_cluster_profiles.csv  product_clustering.ipynb  pyproject.toml
