[project]
name = "clusturing-group-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.9.0",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "mysqlclient>=2.2.7",
    "pandas>=2.3.3",
    "pycairo>=1.29.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.13",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
    "ty>=0.0.12",
]
