[project]
name = "clusturing-group-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.3",
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "mysqlclient>=2.2.7",
    "notebook>=7.5.2",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.260113",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.13",
    "scikit-learn>=1.8.0",
    "scipy-stubs>=1.17.0.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
    "ty>=0.0.12",
]
